@@ -305,6 +305,7 @@ PERFORMANCE
   queries.
 • Treesitter highlighting is now asynchronous. To force synchronous parsing,
   use `vim.g._ts_force_sync_parsing = true`.
+• Treesitter folding is now calculated asynchronously.
 
 PLUGINS
 
